test/invalidImports/service.mock.ts
import {
  IA,
} from "./service.interface";
import { ClassB } from "./service";

export class ClassC extends ClassB {}
export class ClassA implements IA {}
